--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 :root {
-  --main-text-color: #212121;
+  --primary-text-color: #212121;
 
   --secondary-text-color: #757575;
 
@@ -11,15 +11,27 @@
 body {
   background-color: var(--primary-white-color);
 
-  color: var(--main-text-color);
+  color: var(--primary-text-color);
 
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
+
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
 }
 
 /*Логотип*/
 
 .logo {
   color: #212121;
+
+  font-family: "Raleway";
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
 }
 
 .accent {
@@ -30,6 +42,11 @@ body {
 
 .site-nav .link {
   color: #212121;
+
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 
 .site-nav .link:hover,
@@ -45,9 +62,68 @@ body {
 
 .hero .subject {
   color: #ffffff;
+
+  font-family: "Roboto";
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
 }
+
+/* Button */
 
 .hero .button {
   color: #ffffff;
   background-color: #2196f3;
+
+  font-family: "Roboto";
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
+
+  text-align: center;
+  letter-spacing: 0.06em;
+}
+
+.section-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+}
+
+.section-team {
+  background-color: #f5f4fa;
+}
+
+.heading {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+.filter {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.6;
+
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+.filter .button:hover,
+.filter .button:focus {
+  color: #ffffff;
+  background-color: #2196f3;
+}
+
+.page-footer {
+  background: #2f303a;
 }
