--- a/css/styles.css
+++ b/css/styles.css
@@ -9,17 +9,18 @@
 }
 
 body {
-  background-color: var(--primary-white-color);
-
   color: var(--primary-text-color);
 
   font-family: "Roboto", sans-serif;
-
-  font-style: normal;
-  font-weight: 400;
   font-size: 14px;
-  line-height: 1.7;
-  letter-spacing: 0.03em;
+}
+
+.link {
+  text-decoration: none;
+}
+
+.list {
+  list-style: none;
 }
 
 /*Логотип*/
@@ -51,6 +52,15 @@ body {
 
 .site-nav .link:hover,
 .site-nav .link:focus {
+  color: #2196f3;
+}
+
+.auth-nav .link {
+  color: #757575;
+}
+
+.auth-nav .link:hover,
+.auth-nav .link:focus {
   color: #2196f3;
 }
 
@@ -93,11 +103,31 @@ body {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
 
-.section-team {
-  background-color: #f5f4fa;
+.list .text {
+  color: #757575;
+
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
 }
+
+.pointer:hover,
+.pointer:focus {
+  color: #ffffff;
+  background-color: #2196f3;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+/*Section*/
 
 .heading {
   font-family: "Roboto";
@@ -106,6 +136,30 @@ body {
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
+  letter-spacing: 0.03em;
+}
+
+.section-team .user {
+  color: #212121;
+
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+
+  letter-spacing: 0.03em;
+}
+
+.section-team .text {
+  color: #757575;
+
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.19;
+
   letter-spacing: 0.03em;
 }
 
@@ -124,6 +178,40 @@ body {
   background-color: #2196f3;
 }
 
+.more {
+  color: #212121;
+
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+
+.peview {
+  color: #757575;
+
+  font-family: "Roboto";
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.9;
+
+  letter-spacing: 0.03em;
+}
+
 .page-footer {
   background: #2f303a;
+}
+
+.page-footer .address {
+  color: #ffffff;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+}
+
+.page-footer .logo {
+  color: #ffffff;
 }
