--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,11 @@ body {
 
 .auth-nav .link {
   color: #757575;
+
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 
 .auth-nav .link:hover,
@@ -163,7 +168,9 @@ body {
   letter-spacing: 0.03em;
 }
 
-.filter {
+.filter .button {
+  color: #212121;
+
   font-weight: 500;
   font-size: 16px;
   line-height: 1.6;
@@ -178,6 +185,8 @@ body {
   background-color: #2196f3;
 }
 
+/*section*/
+
 .more {
   color: #212121;
 
@@ -187,7 +196,7 @@ body {
   letter-spacing: 0.06em;
 }
 
-.peview {
+.section-content .preview {
   color: #757575;
 
   font-family: "Roboto";
