--- a/css/styles.css
+++ b/css/styles.css
@@ -171,6 +171,7 @@ body {
 .filter .button {
   color: #212121;
 
+  font-family: "Roboto";
   font-weight: 500;
   font-size: 16px;
   line-height: 1.6;
