--- a/css/styles.css
+++ b/css/styles.css
@@ -206,23 +206,15 @@ body {
   align-items: center;
 }
 
-/*Section*/
+/*Section 2*/
 
 .heading {
   padding-top: 94px;
 }
 
-.flex-container .list {
+.container .list-icon {
   display: flex;
   flex-wrap: wrap;
-}
-
-.list .flex-element {
-  margin-right: 30px;
-}
-
-.flex-element:nth-child(3n) {
-  margin-right: 0;
 }
 
 .section-icon .list {
@@ -245,6 +237,7 @@ body {
   margin-top: 94px;
 }
 
+/*Sectio 1*/
 .hidden {
   display: none;
 }
@@ -284,11 +277,12 @@ body {
   flex-wrap: wrap;
 }
 
-.list .team-element {
+.team-container li {
   margin-right: 30px;
 }
 
-.team-element:nth-child(4n) {
+/*Now Doesn't work*/
+.team-container:nth-child(4n) {
   margin-right: 0;
 }
 
@@ -361,13 +355,7 @@ body {
   flex-wrap: wrap;
 }
 
-.list .img-element {
-  margin-right: 30px;
-}
-
-.img-element:nth-child(3n) {
-  margin-right: 0;
-}
+/*1st html*/
 
 .more {
   color: #212121;
