--- a/css/styles.css
+++ b/css/styles.css
@@ -235,12 +235,24 @@ body {
 
 .section .list {
   display: flex;
-  align-items: center;
-  justify-content: center;
+}
+
+.list .section-title {
+  margin-bottom: 0;
+  padding-bottom: 10px;
 }
 
 .link-container .filter {
   align-items: center;
+}
+
+.list .benefits-item {
+  width: 270px;
+  padding-right: 30px;
+}
+
+.list .benefits-item:nth-child(4n) {
+  padding-right: 0;
 }
 
 /*Section Team*/
@@ -259,9 +271,7 @@ body {
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
-}
 
-.list .text {
   margin-bottom: 0;
 }
 
@@ -287,9 +297,19 @@ body {
   margin-right: 30px;
 }
 
-.team-container .text {
-  padding-top: 10px;
+.list .team-subtitle {
+  background: #ffffff;
   text-align: center;
+}
+
+.team-container h3 {
+  padding-top: 30px;
+  margin-bottom: 0;
+}
+
+.team-subtitle p {
+  padding-top: 10px;
+  padding-bottom: 30px;
 }
 
 .section-team {
@@ -338,6 +358,8 @@ body {
   letter-spacing: 0.03em;
 }
 
+/*section portfolio*/
+
 .filter .button {
   padding: 6px 22px;
 
@@ -359,14 +381,6 @@ body {
   background-color: #2196f3;
 }
 
-.list .user {
-  padding-top: 30px;
-  margin-bottom: 0;
-  text-align: center;
-}
-
-/*section portfolio*/
-
 .subtitle > h2,
 p {
   margin-bottom: 0;
@@ -374,10 +388,6 @@ p {
 
 .container .filter {
   margin-bottom: 50px;
-}
-
-.list .item {
-  margin-right: 8px;
 }
 
 .hidden {
@@ -413,8 +423,6 @@ p {
   padding: 20px 24px;
   border: 1px solid #eeeeee;
 }
-
-/*2nd html*/
 
 .more {
   color: #212121;
