--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ h4,
 h5,
 h6,
 p {
-  margin-top: 0;
+  margin: 0;
 }
 /* Класс для обнуления базовых свойств у списков (ul) */
 .list {
@@ -165,7 +165,6 @@ body {
 .hero .subject {
   color: #ffffff;
 
-  font-family: "Roboto";
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -182,8 +181,7 @@ body {
 .subject {
   width: 696px;
   text-align: center;
-  margin-bottom: 0;
-  padding-bottom: 30px;
+  margin-bottom: 30px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -193,8 +191,7 @@ body {
 .hero .button {
   color: #ffffff;
   background-color: #2196f3;
-
-  font-family: "Roboto";
+  font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.9;
@@ -211,22 +208,17 @@ body {
 .button {
   border: 2px;
   border-radius: 4px;
-  align-items: center;
 }
 
 /*Section 2*/
 
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  margin-top: 94px;
+  margin-bottom: 94px;
 }
 
 .benefits {
   padding-bottom: 0;
-}
-
-.list .picture {
-  margin-right: 30px;
 }
 
 .list .picture:nth-child(3n) {
@@ -235,20 +227,15 @@ body {
 
 .section .list {
   display: flex;
+  gap: 30px;
 }
 
 .list .section-title {
-  margin-bottom: 0;
-  padding-bottom: 10px;
-}
-
-.link-container .filter {
-  align-items: center;
+  margin-bottom: 10px;
 }
 
 .list .benefits-item {
   width: 270px;
-  padding-right: 30px;
 }
 
 .list .benefits-item:nth-child(4n) {
@@ -294,22 +281,18 @@ body {
 }
 
 .team-container li {
+  background-color: #ffffff;
   margin-right: 30px;
 }
 
 .list .team-subtitle {
-  background: #ffffff;
+  margin-top: 30px;
   text-align: center;
 }
 
-.team-container h3 {
-  padding-top: 30px;
-  margin-bottom: 0;
-}
-
-.team-subtitle p {
-  padding-top: 10px;
-  padding-bottom: 30px;
+.team-subtitle .text {
+  margin-top: 10px;
+  margin-bottom: 30px;
 }
 
 .section-team {
@@ -318,7 +301,7 @@ body {
 }
 
 .section-team .team-container {
-  padding-top: 50px;
+  margin-top: 50px;
 }
 
 .team-container li:nth-child(4n) {
@@ -337,21 +320,7 @@ body {
 .section-team .user {
   color: #212121;
 
-  font-family: "Roboto";
-  font-style: normal;
   font-weight: 500;
-  font-size: 16px;
-  line-height: 1.19;
-
-  letter-spacing: 0.03em;
-}
-
-.section-team .text {
-  color: #757575;
-
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.19;
 
@@ -371,57 +340,42 @@ body {
   letter-spacing: 0.03em;
 }
 
-.filter .item:nth-child(5n) {
-  margin-right: 0;
-}
-
 .filter .button:hover,
 .filter .button:focus {
   color: #ffffff;
   background-color: #2196f3;
 }
 
-.subtitle > h2,
-p {
+.subtitle {
   margin-bottom: 0;
 }
 
-.container .filter {
+.filter {
+  padding-left: 0;
+  list-style: none;
+  gap: 10px;
   margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.portfolio-list {
+  padding-left: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
 }
 
 .hidden {
   display: none;
 }
 
-.img-container li {
-  margin-right: 30px;
-  margin-bottom: 30px;
-}
-
-.img-container li:nth-child(n + 7) {
-  margin-bottom: 0;
-}
-
-.img-container li:nth-child(3n) {
-  margin-right: 0;
-}
-
-.link-container {
-  display: flex;
-}
-
-.section-content .list {
-  margin-right: auto;
-  margin-left: auto;
-  width: 1200px;
-  display: flex;
-  flex-wrap: wrap;
-}
-
 .subtitle {
   padding: 20px 24px;
   border: 1px solid #eeeeee;
+  border-top: none;
 }
 
 .more {
@@ -447,13 +401,12 @@ p {
 /* Footer*/
 
 .page-footer {
-  background: #2f303a;
+  background-color: #2f303a;
+  padding: 60px 0;
 }
 
 .page-footer .address {
   color: #ffffff;
-  font-family: "Roboto";
-  font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.7;
@@ -464,20 +417,27 @@ p {
   color: #ffffff;
 }
 
-.page-footer .container {
-  padding-top: 60px;
-  padding-bottom: 161px;
-}
-
-.address-container .auth-nav {
+.address-container .footer-contact {
   flex-direction: column;
   padding-top: 9px;
   gap: 9px;
 }
 
-.address-container {
-  padding-top: 20px;
-  padding-bottom: 60px;
+.address {
+  margin-top: 20px;
+}
+
+.footer-contact {
+  margin-top: 6px;
+  color: #757575;
+}
+
+.footer-link {
+  margin-bottom: 9px;
+}
+
+.footer-link:nth-child(2n) {
+  margin-bottom: 0;
 }
 
 .page-footer .container {
